# tutorials-python

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: label-merge-conflict.yml
.prompt/: pine_script.md
ai/deep-learning-basics/: 01_image_and_nn_basics.ipynb  02_fc_nn_fashionmnist.ipynb  03_cnn_fashionmnist.ipynb  04_gan_fashionmnist.ipynb  README.md  pyproject.toml
ai/rag/adv-rag/: 01_prompt_engineering.py  02_hybrid_search.py  03_reranking.py  04_multi_query_retrieval.py  05_context_compression.py  06_conversation_memory.py  07_ragas_evaluation.py  README.md  eval_dataset.json  pyproject.toml  shared.py
ai/rag/adv-rag/chroma_db/: chroma.sqlite3
ai/rag/adv-rag/docs/: consumer-protection-act.md
argparse/: 01_argparse_basics.py  02_argparse_positional_args.py  03_argparse_optional_args.py  04_argparse_positional_optional_args1.py  05_argparse_positional_optional_args2.py  06_argparse_adv.py  07_argparse_conflicting_options.py  08_argparse_get_value_options.py  09_argparse_get_value_options2.py  09_argparse_metavar.py  10_argparse_get_value_options_validation.py  12_argparse_choices.py
blur-photo-sorter/: face_detection.py  main.py
google_drive_api/: hello.txt  quickstart.py
kakao/second_half/: caching.py  secret_map.py  test_caching.py  test_secret_map.py
langchain/ollama/: sample_document.txt  test_ollama.py
mcp/fast_agent/: fastagent.config.yaml  fastagent.secrets.yaml  sizer.py
mcp/mcp_server_hello_world/: server.py
mcp/mcp_server_weather/: pyproject.toml  server.py
mcp/mcp_use/: .env
notion/: auth.py
python/abc-protocol/: test_abc_basic.py  test_abc_vs_protocol.py  test_abstractmethod.py  test_collections_abc.py  test_patterns.py  test_protocol_basic.py  test_runtime_checkable.py
python/argparse/: 02_argparse_positional_args.py  03_argparse_optional_args.py  05_argparse_positional_optional_args2.py  06_argparse_adv.py  08_argparse_get_value_options.py  11_argparse_metavar.py
python/concurrency/: test_asyncio_overview.py  test_benchmark.py  test_concurrent_futures.py  test_gil_demo.py  test_multiprocessing_basic.py  test_threading_basic.py
python/context-manager/: async_context_manager.py  basic_with.py  contextlib_utils.py  contextmanager_decorator.py  custom_context_manager.py  exit_stack_example.py  practical_examples.py
python/dataclasses/: 01_basic_usage.py  02_field_options.py  03_post_init.py  04_frozen.py  05_inheritance.py  06_comparison.py  07_attrs_intro.py  08_cattrs_serialization.py  requirements.txt
python/decorator/: main.py  pyproject.toml
python/decorator/src/decorator_examples/: advanced.py  basic.py  patterns.py
python/decorator/tests/: test_advanced.py  test_basic.py  test_patterns.py
python/enum/: 01_basic_enum.py  02_auto_value.py  03_int_str_enum.py  04_flag_enum.py  05_custom_methods.py  06_comparison_serialize.py  07_practical_patterns.py
python/fastapi/intro/: pyproject.toml
python/fastapi/intro/app/: dependencies.py  main.py
python/fastapi/intro/app/routers/: users.py
python/fastapi/intro/app/schemas/: user.py
python/fastapi/intro/flask_comparison/: flask_app.py
python/fastapi/intro/tests/: test_main.py
python/generator/: 01_iterator_protocol.py  02_generator_basics.py  03_generator_expression.py  04_send_throw_close.py  05_yield_from.py  06_itertools_examples.py  07_memory_benchmark.py  08_practical_patterns.py
python/lambda/: lambda_expr.py  test_lambda_expr.py  test_sort.py
python/logging/: 01_basic_logging.py  02_log_levels.py  03_handlers.py  04_formatters.py  05_dict_config.py  06_yaml_config.py  07_structlog_basic.py  08_structlog_binding.py  09_loguru_basic.py  10_loguru_advanced.py  11_fastapi_logging.py  12_json_correlation_id.py  logging_config.yaml  requirements.txt
python/pattern-matching/: 01_basic_patterns.py  02_structural_patterns.py  03_pattern_combinators.py  04_practical_examples.py  05_match_vs_if.py
python/project-template/: .env.example  .gitignore  README.md  pyproject.toml
python/project-template/.github/workflows/: ci.yml
python/project-template/src/myapp/: config.py  main.py
python/project-template/tests/: test_main.py
python/pytest/intro/: pyproject.toml
python/pytest/intro/src/: calculator.py
python/pytest/intro/tests/: conftest.py  test_basic.py  test_fixture.py  test_marking.py  test_parametrize.py  test_unittest_style.py
python/pytest/intro/tests/sub/: conftest.py  test_sub.py
python/pytest/mock/: conftest.py  pyproject.toml
python/pytest/mock/app/: config.py  repository.py  service.py
python/pytest/mock/tests/: test_api_mocking.py  test_assert_called.py  test_db_mocking.py  test_mock_basic.py  test_mocker.py  test_monkeypatch.py  test_patch.py  test_side_effect.py
python/pytest/plugins/: pyproject.toml
python/pytest/plugins/.github/workflows/: pytest-ci.yml
python/pytest/plugins/src/: async_service.py  calculator.py
python/pytest/plugins/tests/: conftest.py  test_asyncio_demo.py  test_benchmark.py  test_cli_tips.py  test_cov.py  test_custom_fixture.py  test_xdist.py
python/uv-demo/: inline_script_example.py  main.py  pyproject.toml
python/uv-demo/tests/: test_main.py
python3/: sort.py  test_sort.py
python_test/: sort.py  test_lambda_expr.py  test_sort.py
rate_limiting/: naive_rate_limiting.py  queue_rate_limiting.py  test_aiometer.py
streamlit/: basic.py  basic_concepts.py  chart_data.csv
web_scraping/: 01_web_scraping_test.py
(+106 files in other folders)
