[project]
name = "uv-demo"
version = "0.1.0"
description = "uv 패키지 매니저 데모 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]
test = ["pytest>=8.0"]
lint = ["ruff>=0.5.0"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
