[project]
name = "pytest-intro-example"
version = "0.1.0"
description = "pytest 입문 예제"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: 느린 테스트",
    "integration: 통합 테스트",
]
filterwarnings = ["ignore::DeprecationWarning"]
