[project]
name = "pytest-mock-example"
version = "0.1.0"
description = "pytest mock과 monkeypatch 예제"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14",
    "responses>=0.25",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: 느린 테스트",
    "integration: 통합 테스트",
]
