[project]
name = "pytest-plugins-demo"
version = "0.1.0"
description = "pytest 플러그인 활용 예제"
authors = [
    { name = "Frank Oh", email = "frank.oh@naverlabs.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "pytest-asyncio>=0.25",
    "pytest-benchmark>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: 느린 테스트",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 50
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
show_missing = true
